[project]
name = "astrbot-plugin-tetrio-lite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shaogit", email = "hahaha13936113194@126.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
